# rules_jsonnet_examples

grafonnet/: BUILD.bazel  WORKSPACE  prometheus.jsonnet
grafonnet/nested/: BUILD.bazel
